[gd_scene load_steps=11 format=2]

[ext_resource path="res://base/Hex1.png" type="Texture" id=1]
[ext_resource path="res://BadGuys/BaseBadGuy.gd" type="Script" id=2]
[ext_resource path="res://BadGuys/EnemyFSM.gd" type="Script" id=3]
[ext_resource path="res://BadGuys/HeathSystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://BadGuys/BulletBase/EnemyBulletBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/ItemSence/Gold.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/ItemSence/XP.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.527, 38.9892 )

[sub_resource type="CircleShape2D" id=4]
radius = 229.068

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 67.7314, 36.4666 )

[node name="Enemy" type="KinematicBody2D" groups=[
"mobs",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
ItemsList = [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ]
BulletScene = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"mobs",
]]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="EnemyFSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HeathSystem" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.678431, 0.0470588, 0.0470588, 1 )

[node name="detection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 4 )

[node name="EnemyBod" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBod"]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Status" type="RichTextLabel" parent="."]
margin_left = -59.8615
margin_top = -10.6106
margin_right = 59.1385
margin_bottom = 7.3894
rect_pivot_offset = Vector2( 59.1104, 71.5581 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -287.477, -230.944, 105.618, -232.204, 288.307, -233.463, 289.567, 226.408, -283.697, 235.227, -283.697, -220.864 )

[node name="Rotator" type="Node2D" parent="."]

[connection signal="body_entered" from="detection" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="EnemyBod" to="." method="_on_EnemyBod_body_entered"]
[connection signal="body_exited" from="EnemyBod" to="." method="_on_EnemyBod_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
